# TenantGuard-365

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  HANDOFF.md  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260513_0001_baseline.py  20260513_0002_full_schema.py  20260513_0003_totp_and_settings.py  20260514_0004_audit_append_only.py
apps/api/app/: __init__.py  config.py  health.py  logging_setup.py  main.py  otel.py  rate_limit.py  worker_integration.py
apps/api/app/api/: audit_routes.py  auth_routes.py  catalog_routes.py  investigations_routes.py  me_routes.py  modules_routes.py  rbac_routes.py  reporting_routes.py  reports_routes.py  security_alerts_ops.py  security_routes.py  settings_routes.py  system_routes.py  tenants_routes.py
apps/api/app/audit/: logger.py
apps/api/app/auth/: csrf.py  dependencies.py  mock.py  oidc.py  password_policy.py  passwords.py  permissions.py  sessions.py  totp.py
apps/api/app/collectors/: __init__.py  entra_directory_audits.py  entra_groups.py  entra_licenses.py  entra_signins.py  entra_users.py  service_health.py  sharepoint_drives.py  sharepoint_sites.py
apps/api/app/content_search/: __init__.py
apps/api/app/db/: base.py  session.py
apps/api/app/graph/: backoff.py  client.py  token_cache.py  token_provider.py
apps/api/app/notifications/: __init__.py  alerts_hook.py
apps/api/app/registry/: __init__.py  features.py
apps/api/app/remediation/: __init__.py  policies.py
apps/api/app/reports/: __init__.py  builtins.py  export.py  extra_builtins.py  more_builtins.py  scheduler.py
apps/api/app/schemas/: audit.py  user.py
apps/api/app/scripts/: seed.py
apps/api/app/security/: __init__.py  engine.py  extra_rules.py  rules.py
apps/api/scripts/: dump_catalog_md.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: README.md
apps/api/tests/security/: test_security_posture.py
apps/api/tests/unit/: test_audit_hash.py  (+22 more)
apps/worker/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
apps/worker/app/: beat.py  broker.py  config.py  logging_setup.py  main.py
apps/worker/tests/: test_imports.py
(+175 files in other folders)
