[project]
name = "tg365-api"
version = "0.1.0"
description = "M365 Enterprise Control Center — API"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "S",             # bandit-ish
    "ASYNC",         # async checks
    "RUF",
]
ignore = [
    "S101",  # assert in tests
    "S104",  # binding 0.0.0.0 (we run inside containers)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "E501"]
"alembic/**/*.py" = ["E501", "I001"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = []

[[tool.mypy.overrides]]
module = ["tests.*", "alembic.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
filterwarnings = ["error"]
