[project]
name = "tg365-worker"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
# Dramatiq is untyped; we don't gain much from strict here.
disallow_untyped_calls = false
disallow_untyped_defs = true
warn_return_any = false

[[tool.mypy.overrides]]
module = ["app.broker", "app.beat", "app.main"]
disallow_untyped_calls = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
